--- a/style.css
+++ b/style.css
@@ -41,12 +41,13 @@ body {
 
 .page-number {
   position: absolute;
-  bottom: 2cm;
+  bottom: 1.5cm; /* كان 2cm، نزيد المسافة بإزاحته لأسفل */
   left: 0;
   right: 0;
   text-align: center;
   font-size: 12pt;
 }
+
 
 strong {
   font-weight: bold;
